Do not install the JDK in quarantined pipelines - was mainly used to confirm support for Components E2E tests - those tests built more often than required
nit: do not set `$(SkipTests)` to `false`

--- a/.azure/pipelines/quarantined-pr.yml
+++ b/.azure/pipelines/quarantined-pr.yml
@@ -51,6 +51,7 @@ jobs:
     jobName: Helix_quarantined_x64
     jobDisplayName: 'Tests: Helix'
     agentOs: Windows
+    installJdk: false
     timeoutInMinutes: 120
     steps:
     # Build the shared framework
@@ -76,6 +77,7 @@ jobs:
     jobName: Windows_Quarantined_x64
     jobDisplayName: 'Tests: Windows x64'
     agentOs: Windows
+    installJdk: false
     timeoutInMinutes: 90
     isAzDOTestingJob: true
     enablePublishTestResults: false
