--- a/.azure/pipelines/quarantined-tests.yml
+++ b/.azure/pipelines/quarantined-tests.yml
@@ -22,6 +22,7 @@ jobs:
     jobName: Helix_quarantined_x64
     jobDisplayName: 'Tests: Helix'
     agentOs: Windows
+    installJdk: false
     timeoutInMinutes: 480
     steps:
     # Build the shared framework
