--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -14,6 +14,7 @@
     <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" />
     <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.Extensions" />
     <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Antiforgery" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" />
@@ -37,7 +38,21 @@
     <TrimmableProject Include="Microsoft.AspNetCore.Server.Kestrel" />
     <TrimmableProject Include="Microsoft.AspNetCore.Server.Kestrel.Transport.Quic" />
     <TrimmableProject Include="Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Certificate" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Cookies" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Facebook" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Google" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Negotiate" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.OAuth" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.Twitter" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authentication.WsFederation" />
     <TrimmableProject Include="Microsoft.AspNetCore.Authorization" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Authorization.Policy" />
+    <TrimmableProject Include="Microsoft.AspNetCore.CookiePolicy" />
     <TrimmableProject Include="Microsoft.AspNetCore.Cors" />
     <TrimmableProject Include="Microsoft.AspNetCore.Diagnostics.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" />
@@ -56,6 +71,7 @@
     <TrimmableProject Include="Microsoft.AspNetCore.ResponseCaching" />
     <TrimmableProject Include="Microsoft.AspNetCore.ResponseCompression" />
     <TrimmableProject Include="Microsoft.AspNetCore.Rewrite" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Session" />
     <TrimmableProject Include="Microsoft.AspNetCore.SpaProxy" />
     <TrimmableProject Include="Microsoft.AspNetCore.SpaServices.Extensions" />
     <TrimmableProject Include="Microsoft.AspNetCore.StaticFiles" />
