--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -3,7 +3,7 @@ trigger:
   batch: true
   branches:
     include:
-    - internal/release/6.0-nonstable
+    - internal/release/6.0
 
 variables:
   - group: Mirror-Credentials
